Version 1.5.6
* Ignore duplicate certificate authentication challenge in system webview.
* Limit telemetry archive size on disk, and save unserialized telemetry (#837)
* Normalize home account id in cache lookups #839
* Support forgetting cached account (#830)
* Enabling XCODE 11.4 recommended settings by default per customer request.
* Move correlationId to MSIDBaseBrokerOperationRequest 
* Support bypassing redirectUri validation also on macOS
* Indicate whether SSO extension account is available for device wide SSO (#825)
* Add swift static lib target to support AES GCM.
* Append 'PkeyAuth/1.0' keyword to the User Agent String to reliably advertise PkeyAuth capability to ADFS
* Update Identity Core within WPJ to the latest dev branch
* Add a flag to disable logger queue.
* Fix un-reliable test case using swizzle

Version 1.5.5
* Fix unused parameter errors for macOS target. (#816)
* Move openBroswerResponse handling into its operation for CPP integration (#817)
* Cleanup noisy SSO extension logs (#812)
* Mark RSA public key as extractable (#813)
* Cleanup main product targets from test files (#811)
* Fix a test bug where the MacKeychainTokenCache could fail to initialize (#799)
* Save last request telemetry to disk (#768)
* Fix an incorrectly-cased filename (#808)
* Save PRT expiry interval in cache to calculate PRT refresh interval more reliably (#804)
* Move broker redirectUri validation logic into common core from MSAL (#807)
* Refactor crypto code for cpp integration and add api to generate ephemeral asymmetric key pair (#803)
* Add operation factory for broker installation integration with other framework (#779)
* Add logger connector which allows to override logger behaviour. (#796)
* Include redirect uri in body when redeeming refresh token at token endpoint (#815)

Version 1.5.4
-----
* Support for proof of posession for access tokens (#738)
* Allow brokered authentication for /consumers authority (#774)