@@ -41,10 +41,12 @@ NS_ASSUME_NONNULL_BEGIN
 - (nullable instancetype)initWithPrivateKey:(SecKeyRef)privateKey
                                   publicKey:(SecKeyRef)publicKey
                                 certificate:(SecCertificateRef)certificate
-                          certificateIssuer:(NSString *)issuer;
+                          certificateIssuer:(NSString *)issuer
+                               creationDate:(NSDate *)creationDate;
 
 - (nullable instancetype)initWithPrivateKey:(SecKeyRef)privateKey
-                                  publicKey:(SecKeyRef)publicKey NS_UNAVAILABLE;
+                                  publicKey:(SecKeyRef)publicKey
+                               creationDate:(NSDate *)creationDate NS_UNAVAILABLE;
 
 @end
 
