@@ -37,12 +37,14 @@ NS_ASSUME_NONNULL_BEGIN
                       privateKey:(SecKeyRef)privateKey
                        publicKey:(SecKeyRef)publicKey
                      certificate:(SecCertificateRef)certificate
-               certificateIssuer:(NSString *)issuer;
+               certificateIssuer:(NSString *)issuer
+                    creationDate:(NSDate *)creationDate;
 
 - (nullable instancetype)initWithPrivateKey:(SecKeyRef)privateKey
                                   publicKey:(SecKeyRef)publicKey
                                 certificate:(SecCertificateRef)certificate
-                          certificateIssuer:(NSString *)issuer NS_UNAVAILABLE;
+                          certificateIssuer:(NSString *)issuer
+                               creationDate:(NSDate *)creationDate NS_UNAVAILABLE;
 
 - (BOOL)isWorkPlaceJoined;
 
