@@ -1,3 +1,4 @@
+* Add missing functionality to MSIDAssymetricKeyPair to match Djinni Interface
 Version 1.5.6
 * Ignore duplicate certificate authentication challenge in system webview.
 * Limit telemetry archive size on disk, and save unserialized telemetry (#837)
